# python-project-lvl1

./: .travis.yml  Readme.md  pyproject.toml
brain_games/: cli.py
brain_games/games/: base.py  brain_calc.py  brain_even.py
brain_games/games_logics/: brain_even.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py
