[tool.poetry]
name = "chuker_brain_games"
version = "0.3.0"
description = ""
authors = ["Yury Chukanov"]
packages = [
{include = "brain_games"}
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

